lib/libparam/src/client/rparam_client.h

int8_t rparam_get_int8(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
int16_t rparam_get_int16(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
int32_t rparam_get_int32(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
int64_t rparam_get_int64(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
float rparam_get_float(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
double rparam_get_double(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);