lib/libparam/bindings/python/pyparam.py


# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 39
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_int8'):
        continue
    rparam_get_int8 = _lib.rparam_get_int8
    rparam_get_int8.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_int8.restype = c_int8
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 40
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_int16'):
        continue
    rparam_get_int16 = _lib.rparam_get_int16
    rparam_get_int16.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_int16.restype = c_int16
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 41
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_int32'):
        continue
    rparam_get_int32 = _lib.rparam_get_int32
    rparam_get_int32.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_int32.restype = c_int32
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 42
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_int64'):
        continue
    rparam_get_int64 = _lib.rparam_get_int64
    rparam_get_int64.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_int64.restype = c_int64
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 43
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_float'):
        continue
    rparam_get_float = _lib.rparam_get_float
    rparam_get_float.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_float.restype = c_float
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 44
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_double'):
        continue
    rparam_get_double = _lib.rparam_get_double
    rparam_get_double.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_double.restype = c_double
    break

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 14
try:
    MAX_PARAM_NAME_LEN = 14
except:
    pass

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 15
try:
    MAX_PARAM_MEMS = 10
except:
    pass

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 16
try:
    RPARAM_QUERY_MAX_LEN = 180
except:
    pass

param_table_s = struct_param_table_s # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 65

param_index_s = struct_param_index_s # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 73

rparam_frame_s = struct_rparam_frame_s # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 125

# No inserted files

